tests/toy/neg/001870_mutation.toylang
program var a : bool a = { } .
